--- a/LauncherApp/src/main/res/values/strings.xml
+++ b/LauncherApp/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
   <string name="app_name">LauncherApp</string>
+  <string name="launcher_1">LauncherAppN</string>
+  <string name="launcher_2">LauncherAppO</string>
   <string name="application_name">App name: %s</string>
   <string name="version_code">Version code: %d</string>
   <string name="version_name">Version name: %s</string>
